--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ projet/mesh_generator/.vs/
 projet/mesh_generator/mesh_generator/Debug/
 projet/mesh_generator/Debug/
 projet/mesh_generator/mesh_generator/Debug/
-projet/mesh_generator/mesh_generator/Debug
+projet/mesh_generator/.vs/
+projet/mesh_generator/mesh_generator/x64/
+projet/mesh_generator/x64/
