--- a/projet/mesh_generator/mesh_generator/mesh_generator.vcxproj.filters
+++ b/projet/mesh_generator/mesh_generator/mesh_generator.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="Mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SimpleShapeGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
