--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ projet/mesh_generator/mesh_generator/Debug/
 projet/mesh_generator/.vs/
 projet/mesh_generator/mesh_generator/x64/
 projet/mesh_generator/x64/
+projet/mesh_generator/build
+projet/mesh_generator/built
